fix hover dark mode

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -119,6 +119,8 @@ body {
     transition: $transition;
   }
 
+  a:hover,
+  a:focus,
   a:visited {
     color: $white;
   }
